--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -2,13 +2,13 @@ article.post {
     background-color:$textColor;
     color: $textColorLight;
     padding: 20px;
-    
+
     header {
         h1 {
             border-bottom:solid 2px lighten($textColor, 10%);
         }
     }
-    
+
     time {
         font-style:italic;
 //        border-top
@@ -17,8 +17,8 @@ article.post {
     }
     img {
         float: left;
-        margin-right: 10px;        
-        margin-bottom: 10px;        
+        margin-right: 10px;
+        margin-bottom: 10px;
     }
     #disqus_thread {
         padding-top: 10px;
@@ -27,5 +27,14 @@ article.post {
     }
     .social {
         text-align: right;
+    }
+
+    //Override stupid bootstrap wrapping (why?!)
+    pre code, pre {
+        white-space:pre;
+        word-break: normal;
+        word-spacing: 0px;
+        word-wrap: normal;
+
     }
 }
